--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <section>
         <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
         <p>En plein centre ville ou en pleine nature.</p>
-        <p class="pointeur"><img src="Logos/pointeur.png" alt="Pointeur icone" /><input type="text" name="name" placeholder="Ville, Pays..." /><span><input type="button" name="name" value="Rechercher" /></span></p>
+        <div class="SearchBar">
+            <i class="fas fa-map-marker-alt"></i>
+            <input type="text" placeholder="Ville, Pays...">
+            <input type="button" value="Rechercher" class="Search">
+        </div>
         <nav>
             <h4>Filtres</h4>
             <p><img src="Logos/dollar.png" alt="Logo dollar" />Economique</p>
@@ -120,52 +124,54 @@
         <h4>Afficher plus</h4>
     </main>
     <aside>
-        <h2>Les plus populaires</h2><p><img src="Logos\boost.png" alt="Logo" /></p>
+        <h2>Les plus populaires</h2><p><img src="Logos\boost.png" alt="Logo" id="aside_logo" /></p>
         <a href="">
             <!--L'intégralité de l'aside est en href-->
-            <div class="card">
+            <div class="card_aside">
                 <img src="images\home\small\house7.jpg" alt="Hôtel le soleil du matin">
                 <div class="inside">
-                    <h3>Hôtel le soleil du matin</h3>
+                    <h3>Hôtel le soleil du<br /> matin</h3>
                     <p>Nuit à partir de 128€</p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
                 </div>
             </div>
         </a>
 
         <a href="">
-            <div class="card">
+            <div class="card_aside">
                 <img src="images\home\small\house8.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                 <div class="inside">
-                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                    <h3>Au coeur de l'eau<br /> Chambres d'hôtes</h3>
                     <p>Nuit à partir de 71€</p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star checked"></span>
                     <span class="fa fa-star"></span>
                 </div>
             </div>
         </a>
 
         <a href="">
-            <div class="card">
+            <div class="card_aside">
                 <img src="images\home\small\house9.jpg" alt="Hôtel Tout bleu et Blanc">
                 <div class="inside">
-                    <h3>Hôtel Tout bleu et Blanc</h3>
+                    <h3>Hôtel Tout bleu et <br />Blanc</h3>
                     <p>Nuit à partir de 68€</p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star checked"></span>
                     <span class="fa fa-star"></span>
                 </div>
             </div>
         </a>
+
+
     </aside>
     <content>
         <a href="">
