--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Reservia</title>
     <link type="text/css" href="index.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/ae220ac128.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <section>
-        <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
+        <p><strong>Trouvez votre hébergement pour des vacances de rêve</strong></p>
         <p>En plein centre ville ou en pleine nature.</p>
         <div class="SearchBar">
             <i class="fas fa-map-marker-alt"></i>
@@ -174,28 +174,43 @@
 
     </aside>
     <content>
-        <a href="">
+        <h3 id="activites">Activités à Marseille</h3>
+
+        <div class="tete_content">
             <div class="card">
-                <h3 id="activites">Activités à Marseille</h3>
                 <img src="images\activites\small\Port.jpg" alt="Vieux Port" />
                 <p>Vieux Port</p>
-                <div class="block">
+            </div>
+
+            <div class="block">
+                <div class="card">
                     <img src="images\activites\small\Fort.jpg" alt="Fort de Pornègues" />
                     <p>Fort de Pornègues</p>
+                </div>
+                <div class="card">
                     <img src="images\activites\small\Iles.jpg" alt="Iles du Frioul" />
                     <p>Iles du Frioul</p>
                 </div>
+            </div>
+
+            <div class="card">
                 <img src="images\activites\small\Calanques.jpg" alt="Parc National des Calanques" />
                 <p>Parc National des Calanques</p>
-                <div class="block">
+            </div>
+
+            <div class="block">
+                <div class="card">
                     <img src="images\activites\small\Eglise.jpg" alt="Notre-Dame-de-la-Garde" />
                     <p>Notre-Dame-de-la-Garde</p>
+                </div>
+                <div class="card">
                     <img src="images\activites\small\Parc.jpg" alt="Parc Longchamp" />
                     <p>Parc Longchamp</p>
                 </div>
             </div>
-        </a>
+        </div>
     </content>
+
     <footer>
         <h4>A propos</h4>
         <p>Fonctionnement du site</p>
@@ -210,5 +225,6 @@
         <p>Centre d'aide</p>
         <p>Nous contacter</p>
     </footer>
+    <script src="https://kit.fontawesome.com/ae220ac128.js" crossorigin="anonymous"></script>
 </body>
 </html>
