--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Reservia</title>
     <link type="text/css" href="index.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <section>
-        <p><strong>Trouvez votre hébergement pour des vacances de rêve</strong></p>
+        <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
         <p>En plein centre ville ou en pleine nature.</p>
         <div class="SearchBar">
             <i class="fas fa-map-marker-alt"></i>
@@ -187,7 +187,7 @@
                     <img src="images\activites\small\Fort.jpg" alt="Fort de Pornègues" />
                     <p>Fort de Pornègues</p>
                 </div>
-                <div class="card">
+                <div class="card_content">
                     <img src="images\activites\small\Iles.jpg" alt="Iles du Frioul" />
                     <p>Iles du Frioul</p>
                 </div>
@@ -203,7 +203,7 @@
                     <img src="images\activites\small\Eglise.jpg" alt="Notre-Dame-de-la-Garde" />
                     <p>Notre-Dame-de-la-Garde</p>
                 </div>
-                <div class="card">
+                <div class="card_content">
                     <img src="images\activites\small\Parc.jpg" alt="Parc Longchamp" />
                     <p>Parc Longchamp</p>
                 </div>
@@ -212,19 +212,26 @@
     </content>
 
     <footer>
-        <h4>A propos</h4>
-        <p>Fonctionnement du site</p>
-        <p>Conditions générales de vente</p>
-        <p>Données et confidentialité</p>
+        <div class="block_footer">
+            <h4>A propos</h4>
+            <p>Fonctionnement du site</p>
+            <p>Conditions générales de vente</p>
+            <p>Données et confidentialité</p>
+        </div>
 
-        <h4>Nos hébergements</h4>
-        <p>Charte qualité</p>
-        <p>Soumettre votre hôtel</p>
+        <div class="block_footer">
+            <h4>Nos hébergements</h4>
+            <p>Charte qualité</p>
+            <p>Soumettre votre hôtel</p>
+        </div>
 
-        <h4>Assistance</h4>
-        <p>Centre d'aide</p>
-        <p>Nous contacter</p>
+        <div class="block_footer">
+            <h4>Assistance</h4>
+            <p>Centre d'aide</p>
+            <p>Nous contacter</p>
+        </div>
     </footer>
-    <script src="https://kit.fontawesome.com/ae220ac128.js" crossorigin="anonymous"></script>
+
+        <script src="https://kit.fontawesome.com/ae220ac128.js" crossorigin="anonymous"></script>
 </body>
 </html>
