--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="#hebergements"><p>Hébergements</p></a>
             <a href="#activites"><p>Activités</p></a>
-            <a href=""><p>S'inscrire</p></a>
+            <a href=""><p class="inscription"><strong>S'inscrire</strong></p></a>
         </nav>
     </header>
     <section>
@@ -25,7 +25,7 @@
         <div class="SearchBar">
             <i class="fas fa-map-marker-alt"></i>
             <input type="text" placeholder="Ville, Pays...">
-            <input type="button" value="Rechercher" class="Search">
+            <a href=""><input type="button" value="Rechercher" class="Search"></a>
         </div>
         <nav>
             <h4>Filtres</h4>
