--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="#hebergements"><p>Hébergements</p></a>
             <a href="#activites"><p>Activités</p></a>
-            <a href=""><p class="inscription"><strong>S'inscrire</strong></p></a>
+            <a href=""><p class="inscription"><p><strong>S'inscrire</strong></p></a>
         </nav>
     </header>
     <section>
