Mise ne place du responsive au niveau du header, section, aside, et main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="description" content="Page d'accueil du site web Reservia" />
     <meta name="twitter:card" content="summary">
+    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=480" />
     <title>Reservia</title>
     <link type="text/css" href="index.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,12 +33,12 @@
         </div>
         <nav>
             <h4>Filtres</h4>
-            <p id="dollar"><img src="Logos/dollar.png" alt="Logo dollar" />Economique</p>
-            <p><img src="Logos/bonhomme.png" alt="Logo personnage" />Familial</p>
-            <p><img src="Logos/coeur.png" alt="Logo coeur" />Romantique</p>
-            <p><img src="Logos/chien.png" alt="Logo chien" />Animaux autorisés</p>
+            <p id="dollar"><img src="Logos/dollar.png" alt="Logo dollar" /><span id="economique">Economique</span></p>
+            <p id="famille"><img src="Logos/bonhomme.png" alt="Logo personnage" /><span id="familial">Familial</span></p>
+            <p><img src="Logos/coeur.png" alt="Logo coeur" /><span id="romantique">Romantique</span></p>
+            <p id="chien"><img src="Logos/chien.png" alt="Logo chien" /><span id="animaux">Animaux autorisés</span></p>
         </nav>
-        <p><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville.</p> <!--Le "i class" permet d'insérer l'icone du "info"-->
+        <p id="logements"><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville.</p> <!--Le "i class" permet d'insérer l'icone du "info"-->
     </section>
 
     <main>
