Modifications au niveau de la nav barre de la section, ajustement de l'aside (pour le responsive)

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 
     <header>
-        <p><img src="Logos/Reservia.png" alt="Logo de Reservia" /></p>
+        <p><img src="Logos/Reservia.png" alt="Logo de Reservia" id="reservia" /></p>
         <nav>
-            <a href="#hebergements"><p>Hébergements</p></a>
-            <a href="#activites"><p>Activités</p></a>
-            <a href=""><p><strong><span class="inscription">S'inscrire</span></strong></p></a>
+            <a href="#hebergements"><p id="hebergements">Hébergements</p></a>
+            <a href="#activites"><p id="activites">Activités</p></a>
+            <a href=""><p id="inscrip"><strong><span class="inscription">S'inscrire</span></strong></p></a>
         </nav>
     </header>
 
