Mise ne place du responsive au niveau du main

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     </section>
 
     <main>
-        <h2 id="hebergements">Hébergements à Marseille</h2>
+        <h2 id="heberg_marseille">Hébergements à Marseille</h2>
         <div class="block_un">
             <!--Début du block numéro un-->
             <a href="">
                 <!--L'intégralité du main est un href-->
-                <div class="card">
-                    <img src="images\home\small\house1.jpg" alt="Auberge La Cannebière">
+                <div class="card_main">
+                    <img src="images\home\small\house1.jpg" alt="Auberge La Cannebière" id="hotel_cannebiere">
                     <h3>Auberge La Cannebière</h3>
                     <p>Nuit à partir de 25€</p>
                     <span class="fa fa-star checked"></span>
@@ -60,8 +60,8 @@
             </a>
 
             <a href="">
-                <div class="card">
-                    <img src="images\home\small\house2.jpg" alt="Hôtel du port">
+                <div class="card_main">
+                    <img src="images\home\small\house2.jpg" alt="Hôtel du port" id="hotel_port">
                     <h3>Hôtel du port</h3>
                     <p>Nuit à partir de 52€</p>
                     <span class="fa fa-star checked"></span>
@@ -73,8 +73,8 @@
             </a>
 
             <a href="">
-                <div class="card">
-                    <img src="images\home\small\house3.jpg" alt="Hôtel Les mouettes">
+                <div class="card_main">
+                    <img src="images\home\small\house3.jpg" alt="Hôtel Les mouettes" id="hotel_mouettes">
                     <h3>Hôtel Les mouettes</h3>
                     <p>Nuit à partir de 76€</p>
                     <span class="fa fa-star checked"></span>
@@ -88,8 +88,8 @@
         <div class="block_deux">
             <!--Début du block numéro deux-->
             <a href="">
-                <div class="card">
-                    <img src="images\home\small\house4.jpg" alt="Hôtel de la mer">
+                <div class="card_main">
+                    <img src="images\home\small\house4.jpg" alt="Hôtel de la mer" id="hotel_mer">
                     <h3>Hôtel de la mer</h3>
                     <p>Nuit à partir de 45€</p>
                     <span class="fa fa-star checked"></span>
@@ -101,8 +101,8 @@
             </a>
 
             <a href="">
-                <div class="card">
-                    <img src="images\home\small\house5.jpg" alt="Auberge Le Panier">
+                <div class="card_main">
+                    <img src="images\home\small\house5.jpg" alt="Auberge Le Panier" id="hotel_panier">
                     <h3>Auberge Le Panier</h3>
                     <p>Nuit à partir de 23€</p>
                     <span class="fa fa-star checked"></span>
@@ -114,8 +114,8 @@
             </a>
 
             <a href="">
-                <div class="card">
-                    <img src="images\home\small\house6.jpg" alt="Hôtel chez Amina">
+                <div class="card_main">
+                    <img src="images\home\small\house6.jpg" alt="Hôtel chez Amina" id="hotel_amina">
                     <h3>Hôtel chez Amina</h3>
                     <p>Nuit à partir de 95€</p>
                     <span class="fa fa-star checked"></span>
