Correction des images au niveau du content (pour la partie deckstop.)Mise en place du responsive pour le content et le footer en version smartphone.

--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
         <h3 id="activites">Activités à Marseille</h3>
 
         <div class="tete_content">
-            <div class="card_content">
+            <div class="card_content_alone">
                 <img src="images\activites\small\Port.jpg" alt="Vieux Port" id="port" />
                 <p>Vieux Port</p>
             </div>
 
             <div class="block">
                 <div class="card_content">
-                    <img src="images\activites\small\Fort.jpg" alt="Fort de Pornègues" />
+                    <img src="images\activites\small\Fort.jpg" alt="Fort de Pornègues" id="fort" />
                     <p>Fort de Pornègues</p>
                 </div>
                 <div class="card_content">
@@ -199,14 +199,14 @@
                 </div>
             </div>
 
-            <div class="card_content">
-                <img src="images\activites\small\Calanques.jpg" alt="Parc National des Calanques" />
+            <div class="card_content_alone">
+                <img src="images\activites\small\Calanques.jpg" alt="Parc National des Calanques" id="parc_calanques" />
                 <p>Parc National des Calanques</p>
             </div>
 
             <div class="block">
                 <div class="card_content">
-                    <img src="images\activites\small\Eglise.jpg" alt="Notre-Dame-de-la-Garde" />
+                    <img src="images\activites\small\Eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
                     <p>Notre-Dame-de-la-Garde</p>
                 </div>
                 <div class="card_content">
