Mise en place du responsive pour tablette, finition du responsive mobile.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <p><img src="Logos/Reservia.png" alt="Logo de Reservia" id="reservia" /></p>
         <nav>
-            <a href="#hebergements"><p id="hebergements">Hébergements</p></a>
-            <a href="#activites"><p id="activites">Activités</p></a>
+            <a href="#heberg_marseille"><p id="hebergements">Hébergements</p></a>
+            <a href="#activ"><p id="activites">Activités</p></a>
             <a href=""><p id="inscrip"><strong><span class="inscription">S'inscrire</span></strong></p></a>
         </nav>
     </header>
@@ -180,7 +180,7 @@
     </aside>
 
     <content>
-        <h3 id="activites">Activités à Marseille</h3>
+        <h3 id="activ">Activités à Marseille</h3>
 
         <div class="tete_content">
             <div class="card_content_alone">
