--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <p id="famille"><img src="Logos/bonhomme.png" alt="Logo personnage" /><span id="familial">Familial</span></p>
             <p><img src="Logos/coeur.png" alt="Logo coeur" /><span id="romantique">Romantique</span></p>
             <p id="chien"><img src="Logos/chien.png" alt="Logo chien" /><span id="animaux">Animaux autorisés</span></p>
-        </nav>
-        <p id="logements"><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville.</p> <!--Le "i class" permet d'insérer l'icone du "info"-->
+        </nav>    
+        <p id="logements"><i class="fas fa-info-circle" style="color:#0082ff;"></i>Plus de 500 logements sont disponibles dans cette ville.</p> <!--Le "i class" permet d'insérer l'icone du "info"-->
     </section>
 
     <main>
@@ -185,33 +185,33 @@
         <div class="tete_content">
             <div class="card_content_alone">
                 <img src="images\activites\small\Port.jpg" alt="Vieux Port" id="port" />
-                <p>Vieux Port</p>
+                <p><strong>Vieux Port</strong></p>
             </div>
 
             <div class="block">
                 <div class="card_content">
                     <img src="images\activites\small\Fort.jpg" alt="Fort de Pornègues" id="fort" />
-                    <p>Fort de Pornègues</p>
+                    <p><strong>Fort de Pornègues</strong></p>
                 </div>
                 <div class="card_content">
                     <img src="images\activites\small\Iles.jpg" alt="Iles du Frioul" id="iles" />
-                    <p>Iles du Frioul</p>
+                    <p><strong>Iles du Frioul</strong></p>
                 </div>
             </div>
 
             <div class="card_content_alone">
                 <img src="images\activites\small\Calanques.jpg" alt="Parc National des Calanques" id="parc_calanques" />
-                <p>Parc National des Calanques</p>
+                <p><strong>Parc National des Calanques</strong></p>
             </div>
 
             <div class="block">
                 <div class="card_content">
                     <img src="images\activites\small\Eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
-                    <p>Notre-Dame-de-la-Garde</p>
+                    <p><strong>Notre-Dame-de-la-Garde</strong></p>
                 </div>
                 <div class="card_content">
                     <img src="images\activites\small\Parc.jpg" alt="Parc Longchamp" id="longchamp" />
-                    <p>Parc Longchamp</p>
+                    <p><strong>Parc Longchamp</strong></p>
                 </div>
             </div>
         </div>
