Ajout de la balise meta

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Page d'accueil du site web Reservia" />
     <meta name="twitter:card" content="summary">
     <meta name="viewport" content="width=device-width" />
+    <meta name="google-site-verification" content="_uQGgJQ2dpn_8GfAhHTzKMhGBALfniQQl7a_tf7XG3c" />
     <title>Reservia</title>
     <link type="text/css" href="index.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
