Corretif sur les images du content

--- a/index.html
+++ b/index.html
@@ -215,27 +215,27 @@
 
             <div class="block">
                 <div class="card_content">
-                    <img src="images\activites\small\Fort.jpg" alt="Fort de Pornègues" id="fort" />
+                    <img src="images\activites\small\fort.jpg" alt="Fort de Pornègues" id="fort" />
                     <p><strong>Fort de Pornègues</strong></p>
                 </div>
                 <div class="card_content">
-                    <img src="images\activites\small\Iles.jpg" alt="Iles du Frioul" id="iles" />
+                    <img src="images\activites\small\iles.jpg" alt="Iles du Frioul" id="iles" />
                     <p><strong>Iles du Frioul</strong></p>
                 </div>
             </div>
 
             <div class="card_content_alone">
-                <img src="images\activites\small\Calanques.jpg" alt="Parc National des Calanques" id="parc_calanques" />
+                <img src="images\activites\small\calanques.jpg" alt="Parc National des Calanques" id="parc_calanques" />
                 <p><strong>Parc National des Calanques</strong></p>
             </div>
 
             <div class="block">
                 <div class="card_content">
-                    <img src="images\activites\small\Eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
+                    <img src="images\activites\small\eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
                     <p><strong>Notre-Dame-de-la-Garde</strong></p>
                 </div>
                 <div class="card_content">
-                    <img src="images\activites\small\Parc.jpg" alt="Parc Longchamp" id="longchamp" />
+                    <img src="images\activites\small\parc.jpg" alt="Parc Longchamp" id="longchamp" />
                     <p><strong>Parc Longchamp</strong></p>
                 </div>
             </div>
