Corretif sur les images du content

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <div class="tete_content">
             <div class="card_content_alone">
-                <img src="images\activites\small\Port.jpg" alt="Vieux Port" id="port" />
+                <img src="images\activites\small\port.jpg" alt="Vieux Port" id="port" />
                 <p><strong>Vieux Port</strong></p>
             </div>
 
