Corretif sur les images du content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <header>
-        <p><img src="Logos/Reservia.png" alt="Logo de Reservia" id="reservia" /></p>
+        <p><img src="Logos/reservia.png" alt="Logo de Reservia" id="reservia" /></p>
         <nav>
             <a href="#heberg_marseille">
                 <p id="hebergements">Hébergements</p>
