Correctif sur la version dekstop pour le bug de la barre de scroll latérale + pour le header en format responsive tablette et mobile.

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
             </div>
 
             <div class="block">
-                <div class="card_content">
+                <div class="card_content_fort">
                     <img src="images\activites\small\fort.jpg" alt="Fort de Pornègues" id="fort" />
                     <p><strong>Fort de Pornègues</strong></p>
                 </div>
-                <div class="card_content">
+                <div class="card_content_iles">
                     <img src="images\activites\small\iles.jpg" alt="Iles du Frioul" id="iles" />
                     <p><strong>Iles du Frioul</strong></p>
                 </div>
