--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="SearchBar">
             <i class="fas fa-map-marker-alt"></i>
             <input type="text" placeholder="Ville, Pays...">
-            <a href=""><input type="button" value="Rechercher" class="Search"></a>
+            <input type="button" value="Rechercher" class="Search">
         </div>
         <nav>
             <h4>Filtres</h4>
@@ -60,7 +60,7 @@
             <a href="">
                 <!--L'intégralité du main est un href-->
                 <div class="card_main">
-                    <img src="images\home\small\house1.jpg" alt="Auberge La Cannebière" id="hotel_cannebiere">
+                    <img src="images/home/small/house1.jpg" alt="Auberge La Cannebière" id="hotel_cannebiere">
                     <h3>Auberge La Cannebière</h3>
                     <p>Nuit à partir de 25€</p>
                     <span class="fa fa-star checked"></span>
@@ -73,7 +73,7 @@
 
             <a href="">
                 <div class="card_main">
-                    <img src="images\home\small\house2.jpg" alt="Hôtel du port" id="hotel_port">
+                    <img src="images/home/small/house2.jpg" alt="Hôtel du port" id="hotel_port">
                     <h3>Hôtel du port</h3>
                     <p>Nuit à partir de 52€</p>
                     <span class="fa fa-star checked"></span>
@@ -86,7 +86,7 @@
 
             <a href="">
                 <div class="card_main">
-                    <img src="images\home\small\house3.jpg" alt="Hôtel Les mouettes" id="hotel_mouettes">
+                    <img src="images/home/small/house3.jpg" alt="Hôtel Les mouettes" id="hotel_mouettes">
                     <h3>Hôtel Les mouettes</h3>
                     <p>Nuit à partir de 76€</p>
                     <span class="fa fa-star checked"></span>
@@ -102,7 +102,7 @@
             <!--Début du block numéro deux-->
             <a href="">
                 <div class="card_main">
-                    <img src="images\home\small\house4.jpg" alt="Hôtel de la mer" id="hotel_mer">
+                    <img src="images/home/small/house4.jpg" alt="Hôtel de la mer" id="hotel_mer">
                     <h3>Hôtel de la mer</h3>
                     <p>Nuit à partir de 45€</p>
                     <span class="fa fa-star checked"></span>
@@ -115,7 +115,7 @@
 
             <a href="">
                 <div class="card_main">
-                    <img src="images\home\small\house5.jpg" alt="Auberge Le Panier" id="hotel_panier">
+                    <img src="images/home/small/house5.jpg" alt="Auberge Le Panier" id="hotel_panier">
                     <h3>Auberge Le Panier</h3>
                     <p>Nuit à partir de 23€</p>
                     <span class="fa fa-star checked"></span>
@@ -128,7 +128,7 @@
 
             <a href="">
                 <div class="card_main">
-                    <img src="images\home\small\house6.jpg" alt="Hôtel chez Amina" id="hotel_amina">
+                    <img src="images/home/small/house6.jpg" alt="Hôtel chez Amina" id="hotel_amina">
                     <h3>Hôtel chez Amina</h3>
                     <p>Nuit à partir de 95€</p>
                     <span class="fa fa-star checked"></span>
@@ -145,12 +145,12 @@
 
     <aside>
         <h2>Les plus populaires</h2>
-        <p><img src="Logos\boost.png" alt="Logo" id="aside_logo" /></p>
+        <p class="boost_logo"><img src="Logos/boost.png" alt="Logo" id="aside_logo" /></p>
 
         <!--L'intégralité de l'aside est en href-->
         <div class="card_aside">
             <a href="">
-                <img src="images\home\small\house7.jpg" alt="Hôtel le soleil du matin" id="soleil_matin">
+                <img src="images/home/small/house7.jpg" alt="Hôtel le soleil du matin" id="soleil_matin">
                 <div class="inside">
                     <h3>Hôtel le soleil du<br /> matin</h3>
                     <p>Nuit à partir de 128€</p>
@@ -165,7 +165,7 @@
 
         <div class="card_aside">
             <a href="">
-                <img src="images\home\small\house8.jpg" alt="Au coeur de l'eau Chambres d'hôtes" id="chambre_hote">
+                <img src="images/home/small/house8.jpg" alt="Au coeur de l'eau Chambres d'hôtes" id="chambre_hote">
                 <div class="inside">
                     <h3>Au coeur de l'eau<br /> Chambres d'hôtes</h3>
                     <p>Nuit à partir de 71€</p>
@@ -180,7 +180,7 @@
 
         <div class="card_aside">
             <a href="">
-                <img src="images\home\small\house9.jpg" alt="Hôtel Tout bleu et Blanc">
+                <img src="images/home/small/house9.jpg" alt="Hôtel Tout bleu et Blanc" id="hotel_bleu_blanc">
                 <div class="inside">
                     <h3>Hôtel Tout bleu et <br />Blanc</h3>
                     <p>Nuit à partir de 68€</p>
@@ -194,43 +194,43 @@
         </div>
     </aside>
 
-    <content>
+    <article>
         <h3 id="activ">Activités à Marseille</h3>
 
-        <div class="tete_content">
-            <div class="card_content_alone">
-                <img src="images\activites\small\port.jpg" alt="Vieux Port" id="port" />
+        <div class="tete_article">
+            <div class="card_article_alone">
+                <img src="images/activites/small/port.jpg" alt="Vieux Port" id="port" />
                 <p><strong>Vieux Port</strong></p>
             </div>
 
             <div class="block">
-                <div class="card_content_fort">
-                    <img src="images\activites\small\fort.jpg" alt="Fort de Pornègues" id="fort" />
+                <div class="card_article_fort">
+                    <img src="images/activites/small/fort.jpg" alt="Fort de Pornègues" id="fort" />
                     <p><strong>Fort de Pornègues</strong></p>
                 </div>
-                <div class="card_content_iles">
-                    <img src="images\activites\small\iles.jpg" alt="Iles du Frioul" id="iles" />
+                <div class="card_article_iles">
+                    <img src="images/activites/small/iles.jpg" alt="Iles du Frioul" id="iles" />
                     <p><strong>Iles du Frioul</strong></p>
                 </div>
             </div>
 
-            <div class="card_content_alone">
-                <img src="images\activites\small\calanques.jpg" alt="Parc National des Calanques" id="parc_calanques" />
+            <div class="card_article_alone">
+                <img src="images/activites/small/calanques.jpg" alt="Parc National des Calanques" id="parc_calanques" />
                 <p><strong>Parc National des Calanques</strong></p>
             </div>
 
             <div class="block">
-                <div class="card_content">
-                    <img src="images\activites\small\eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
+                <div class="card_article_eglise">
+                    <img src="images/activites/small/eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
                     <p><strong>Notre-Dame-de-la-Garde</strong></p>
                 </div>
-                <div class="card_content">
-                    <img src="images\activites\small\parc.jpg" alt="Parc Longchamp" id="longchamp" />
+                <div class="card_article_longchamp">
+                    <img src="images/activites/small/parc.jpg" alt="Parc Longchamp" id="longchamp" />
                     <p><strong>Parc Longchamp</strong></p>
                 </div>
             </div>
         </div>
-    </content>
+    </article>
 
     <footer>
         <div class="block_footer">
