--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </div>
         <nav>
             <h4>Filtres</h4>
-            <p id="dollar"><img src="Logos/dollar.png" alt="Logo dollar" /><span id="economique">Economique</span></p>
-            <p id="famille"><img src="Logos/bonhomme.png" alt="Logo personnage" /><span id="familial">Familial</span></p>
-            <p><img src="Logos/coeur.png" alt="Logo coeur" /><span id="romantique">Romantique</span></p>
-            <p id="chien"><img src="Logos/chien.png" alt="Logo chien" /><span id="animaux">Animaux autorisés</span></p>
+            <p id="dollar"><i class="fas fa-money-bill-wave"></i><span id="economique">Economique</span></p>
+            <p id="famille"><i class="fas fa-child"></i><span id="familial">Familial</span></p>
+            <p id="coeur"><i class="fas fa-heart"></i><span id="romantique">Romantique</span></p>
+            <p id="chien"><i class="fas fa-dog"></i><span id="animaux">Animaux autorisés</span></p>
         </nav>
         <p id="logements"><i class="fas fa-info-circle" style="color:#0082ff;"></i>Plus de 500 logements sont disponibles dans cette ville.</p>
         <!--Le "i class" permet d'insérer l'icone du "info"-->
