Mise en place de l'icone boost sur l'aside

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link type="text/css" href="index.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
 
 
 </head>
@@ -50,7 +49,6 @@
             <p id="chien"><i class="fas fa-dog"></i><span id="animaux">Animaux autorisés</span></p>
         </nav>
         <p id="logements"><i class="fas fa-info-circle" style="color:#0082ff;"></i>Plus de 500 logements sont disponibles dans cette ville.</p>
-        <!--Le "i class" permet d'insérer l'icone du "info"-->
     </section>
 
     <main>
@@ -58,7 +56,6 @@
         <div class="block_un">
             <!--Début du block numéro un-->
             <a href="">
-                <!--L'intégralité du main est un href-->
                 <div class="card_main">
                     <img src="images/home/small/house1.jpg" alt="Auberge La Cannebière" id="hotel_cannebiere">
                     <h3>Auberge La Cannebière</h3>
@@ -145,9 +142,8 @@
 
     <aside>
         <h2>Les plus populaires</h2>
-        <p class="boost_logo"><img src="Logos/boost.png" alt="Logo" id="aside_logo" /></p>
+        <p class="boost_logo"><i class="fas fa-chart-line"></i></p>
 
-        <!--L'intégralité de l'aside est en href-->
         <div class="card_aside">
             <a href="">
                 <img src="images/home/small/house7.jpg" alt="Hôtel le soleil du matin" id="soleil_matin">
