Amélioration générale des espacements et du responsive

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <header>
         <p><img src="Logos/reservia.png" alt="Logo de Reservia" id="reservia" /></p>
         <nav>
-            <a href="#heberg_marseille">
+            <a href="#heberg_marseille" id="nav_hebergements_container">
                 <p id="hebergements">Hébergements</p>
             </a>
-            <a href="#activ">
+            <a href="#activ" id="nav_activites_container">
                 <p id="activites">Activités</p>
             </a>
             <a href="">
