Correction des erreurs sur le W3C css validator et amélioration du responsive

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <p><strong>Vieux Port</strong></p>
             </div>
 
-            <div class="block">
+            <div class="block_un_article">
                 <div class="card_article_fort">
                     <img src="images/activites/small/fort.jpg" alt="Fort de Pornègues" id="fort" />
                     <p><strong>Fort de Pornègues</strong></p>
@@ -215,7 +215,7 @@
                 <p><strong>Parc National des Calanques</strong></p>
             </div>
 
-            <div class="block">
+            <div class="block_deux_article">
                 <div class="card_article_eglise">
                     <img src="images/activites/small/eglise.jpg" alt="Notre-Dame-de-la-Garde" id="eglise" />
                     <p><strong>Notre-Dame-de-la-Garde</strong></p>
